--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jinja2 = "^3.1.5"
 litellm = "^1.60.6"
 pydantic = "^2.10.6"
 tenacity = "^9.0.0"
+tavily-python = "^0.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
