--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ litellm = "^1.60.6"
 pydantic = "^2.10.6"
 tenacity = "^9.0.0"
 tavily-python = "^0.5.1"
+pylint = "^3.3.4"
+graphviz = "^0.20.3"
+black = "^25.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
